--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,9 +1,9 @@
-<div class="content">
-    <div class="row mt-5">
-        <div class="col-md-7 col-sm-12">
-            <img class="cover" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png">
+<div class="content" name="divContent">
+    <div class="row mt-5" name="rowLogin">
+        <div class="col-md-7 col-sm-12" name="colImage">
+            <img class="cover" name="image" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png">
         </div>
-        <div class="col-md-5 col-sm-12">
+        <div class="col-md-5 col-sm-12" name="colLogin">
             <auth-login></auth-login>
         </div>
     </div>
