--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,10 @@
-<div class="row" style="display: flex;align-items: center;height: 90vh;">
-    <div class="col-6 col-md-6 text-right ">
-        <button mat-stroked-button color="accent" (click)="openDialog()" class="style-btn">เริ่มธุรกิจ</button>
+<div class="row" style="display: flex;align-items: center;height: 90vh;" name="rowBtn">
+    <div class="col-6 col-md-6 text-right" name="colBtn">
+        <button mat-stroked-button color="accent" (click)="openDialog()" class="style-btn"
+            name="btnCreate">เริ่มธุรกิจ</button>
     </div>
-    <div class="col-6 col-md-6 text-left ">
-        <button mat-stroked-button color="accent" (click)="createmember()" class="style-btn">เข้าร่วมธุรกิจ</button>
+    <div class="col-6 col-md-6 text-left" name="colBtn2">
+        <button mat-stroked-button color="accent" (click)="createmember()" class="style-btn"
+            name="btnJoin">เข้าร่วมธุรกิจ</button>
     </div>
 </div>
