--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -12,7 +12,7 @@
               </div>
               <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
                 name="colBtnWaitWithdrawal">
-                <button mat-stroked-button color="accent" (click)="gotoOrderReport()" class="style-btn mr-2"
+                <button mat-stroked-button color="accent" (click)="gotoOrderReport(item)" class="style-btn mr-2"
                   name="btnWithdrawalList">รายการเบิก</button>
                 <button mat-stroked-button color="accent" class="style-btn" name="BtnWithdrawal">ทำการเบิกเเล้ว</button>
               </div>
