--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,11 +1,11 @@
-<div class="content">
-  <div class="row mt-5">
-      <div class="col-md-7 col-sm-12">
-          <img class="cover" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png"
+<div name="divFormRegis" class="content">
+  <div name="divRowFormRegis" class="row mt-5">
+      <div name="divFormImage" class="col-md-7 col-sm-12">
+          <img name="image" class="cover" src="http://comunytek.com/wp-content/uploads/2017/03/Microservices.png"
               alt="">
       </div>
 
-      <div class="col-md-5 col-sm-12">
+      <div name="divAuthRegis" class="col-md-5 col-sm-12">
         <auth-register></auth-register>
       </div>
   </div>
