--- a/src/app/pages/order-report-detail/order-report-detail.component.html
+++ b/src/app/pages/order-report-detail/order-report-detail.component.html
@@ -1,40 +1,43 @@
-<div class="row mt-3 border-all">
-  <div class="col-6 border-right border-bt">
-    <p class="mt-2 mb-2">ชื่อสินค้า</p>
+<h1 *ngIf="dataReport && dataReport.teamname"> {{dataReport.teamname}} </h1>
+
+
+<div class="row mt-3 border-all" *ngIf="dataReport && dataReport.reportall">
+  <div class="col-6 border-right border-bt text-center">
+    <p style="font-weight: bold;" class="mt-2 mb-2">ชื่อสินค้า</p>
   </div>
-  <div class="col-3 border-right border-bt">
-    <p class="mt-2 mb-2">จำนวน</p>
+  <div class="col-3 border-right border-bt text-center">
+    <p style="font-weight: bold;" class="mt-2 mb-2">จำนวน</p>
   </div>
-  <div class="col-3 border-bt border-right">
-    <p class="mt-2 mb-2">ราคา(ต่อหน่วย)</p>
+  <div class="col-3 border-bt border-right text-center">
+    <p style="font-weight: bold;" class="mt-2 mb-2">ราคา(ต่อหน่วย)</p>
   </div>
-  <div class="col-12" *ngFor="let item of [1,2,3]">
+  <div class="col-12" *ngFor="let item of dataReport.reportall.items">
     <div class="row">
-      <div class="col-6 border-right">
-        <p class="mt-2 mb-2 mg-o ">ลิปสีแดง</p>
+      <div class="col-6 border-right text-center">
+        <p class="mt-2 mb-2 mg-o ">{{item.name}}</p>
       </div>
-      <div class="col-3 border-right">
-        <p class="mt-2 mb-2 mg-o ">3</p>
+      <div class="col-3 border-right text-center">
+        <p class="mt-2 mb-2 mg-o ">{{item.qty}} </p>
       </div>
-      <div class="col-3 border-right">
-        <p class="mt-2 mb-2 mg-o ">100</p>
+      <div class="col-3 border-right text-center">
+        <p class="mt-2 mb-2 mg-o ">{{item.price }} </p>
       </div>
     </div>
 
   </div>
 
-  <div class="col-6 border-right border-top">
-    <p class="mt-2 mb-2">รวม</p>
+  <div class="col-6 border-right border-top text-center">
+    <p style="font-weight: bold;" class="mt-2 mb-2">รวม</p>
   </div>
-  <div class="col-3 border-right border-top">
-    <p class="mt-2 mb-2">9</p>
+  <div class="col-3 border-right border-top text-center">
+    <p style="font-weight: bold;" class="mt-2 mb-2">{{dataReport.reportall.totalqty | number}}</p>
   </div>
-  <div class="col-3  border-top border-right">
-    <p class="mt-2 mb-2">900</p>
+  <div class="col-3  border-top border-right text-center">
+    <p style="font-weight: bold;" class="mt-2 mb-2">{{dataReport.reportall.totalprice | number}}</p>
   </div>
 </div>
 
-<div class="row mt-3 border-all border-right mb-3">
+<div class="row mt-3 border-all border-right mb-3" *ngIf="dataReport && dataReport.reportDetail">
   <div class="col-4 ">
     <p class="mt-2 mb-2">ผู้รับ</p>
   </div>
@@ -44,29 +47,28 @@
   <div class="col-4 ">
     <p class="mt-2 mb-2">จำนวน</p>
   </div>
-  <div class="col-12 border-top" *ngFor="let item of [1,2,3]">
+  <div class="col-12 border-top" *ngFor="let item of dataReport.reportDetail">
     <div class="row">
       <div class="col-4">
-        <p class="mt-2 mb-2 mg-o ">Bam</p>
+        <p class="mt-2 mb-2 mg-o ">{{item.customer.firstname}} {{item.customer.lastname}}</p>
       </div>
-      <div class="col-4">
-        <p class="mt-2 mb-2 mg-o ">-ลิปสีแดง</p>
-      </div>
-      <div class="col-4">
-        <p class="mt-2 mb-2 mg-o "></p>
-      </div>
-      <div class="col-4">
-        <p class="mt-2 mb-2 mg-o "></p>
-      </div>
-      <div class="col-4">
-        <p class="mt-2 mb-2 mg-o mg-Left ">ex1</p>
-        <p class="mt-2 mb-2 mg-o mg-Left ">ex2</p>
-        <p class="mt-2 mb-2 mg-o mg-Left ">ex3</p>
-      </div>
-      <div class="col-4">
-        <p class="mt-2 mb-2 mg-o ">1</p>
-        <p class="mt-2 mb-2 mg-o ">1</p>
-        <p class="mt-2 mb-2 mg-o ">1</p>
+      <div class="col-8">
+        <div class="row" *ngFor="let itm of item.items">
+          <div class="col-12">
+            <p class="mt-2 mb-2 mg-o ">-{{itm.name}}</p>
+          </div>
+          <div class="col-12" *ngFor="let it of itm.value">
+            <div class="row">
+              <div class="col-6">
+                <p class="mt-2 mb-2 mg-o mg-Left">{{it.name}}</p>
+              </div>
+              <div class="col-6">
+                <p class="mt-2 mb-2 mg-o mg-Left"> <span>{{it.qty}}</span> </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
 
