--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -20,16 +20,18 @@
           <span>{{item.totalamount?item.totalamount:0 }} </span>
           <span>บาท</span></p>
 
-        <span class="d-none d-sm-none d-md-block">
-          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
+        <span class="d-none d-sm-none d-md-block" name="spanBtn">
+          <button mat-stroked-button color="accent" name="btnEdit" (click)='onClickEdit(item)'
             class="mb-1 mr-2 style-btn">เเก้ไข</button>
-          <button mat-stroked-button color="accent" (click)="onDelete(item)" class="mb-1 style-btn">ลบ</button>
+          <button mat-stroked-button color="accent" name="btnDelete" (click)="onDelete(item)"
+            class="mb-1 style-btn">ลบ</button>
         </span>
 
-        <span class="d-block d-sm-block d-md-none">
-          <button mat-stroked-button color="accent" (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn-small"
-            style="margin-right: 1px">เเก้ไข</button>
-          <button mat-stroked-button color="accent" (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
+        <span class="d-block d-sm-block d-md-none" name="spanBtn2">
+          <button mat-stroked-button color="accent" name="btnEdit2" (click)='onClickEdit(item)'
+            class="mb-1 mr-2 style-btn-small" style="margin-right: 1px">เเก้ไข</button>
+          <button mat-stroked-button color="accent" name="btnDelete2" (click)="onDelete(item)"
+            class="mb-1 style-btn-small">ลบ</button>
         </span>
       </div>
     </div>
@@ -38,9 +40,10 @@
 
 </div>
 
-<div class="row mt-4" *ngIf="rolesUser === 'owner'">
-  <div class="col-12">
-    <button class="style-btn-width btn-border-style" color="accent" [disabled]='dataOrderAll.length === 0'
-      mat-stroked-button (click)='sendOrder()' style="margin-right: 1px">ส่งใบสั่งซื้อ</button>
+<div class="row mt-4" *ngIf="rolesUser === 'owner'" name="divRowSendOrderForOwner">
+  <div class="col-12" name="divRowSendOrderForOwner">
+    <button class="style-btn-width btn-border-style" name="btnSendOrder" color="accent"
+      [disabled]='dataOrderAll.length === 0' mat-stroked-button (click)='sendOrder()'
+      style="margin-right: 1px">ส่งใบสั่งซื้อ</button>
   </div>
 </div>
