--- a/src/app/pages/order-report-detail/order-report-detail.component.html
+++ b/src/app/pages/order-report-detail/order-report-detail.component.html
@@ -1,69 +1,65 @@
-<h1 *ngIf="dataReport && dataReport.teamname"> {{dataReport.teamname}} </h1>
-
-
-<div class="row mt-3 border-all" *ngIf="dataReport && dataReport.reportall">
-  <div class="col-6 border-right border-bt text-center">
-    <p style="font-weight: bold;" class="mt-2 mb-2">ชื่อสินค้า</p>
+<h1 name="headNameteam" *ngIf="dataReport && dataReport.teamname"> {{dataReport.teamname}} </h1>
+<div class="row mt-3 border-all" name="divReporstAll" *ngIf="dataReport && dataReport.reportall">
+  <div name="divNameProduct" class="col-6 border-right border-bt text-center">
+    <p name="nameProduct" style="font-weight: bold;" class="mt-2 mb-2">ชื่อสินค้า</p>
   </div>
-  <div class="col-3 border-right border-bt text-center">
-    <p style="font-weight: bold;" class="mt-2 mb-2">จำนวน</p>
+  <div name="divQtyProduct" class="col-3 border-right border-bt text-center">
+    <p name="qtyProduct" style="font-weight: bold;" class="mt-2 mb-2">จำนวน</p>
   </div>
-  <div class="col-3 border-bt border-right text-center">
-    <p style="font-weight: bold;" class="mt-2 mb-2">ราคา(ต่อหน่วย)</p>
+  <div name="namePriceProduct" class="col-3 border-bt border-right text-center">
+    <p name="priceProduct" style="font-weight: bold;" class="mt-2 mb-2">ราคา(ต่อหน่วย)</p>
   </div>
-  <div class="col-12" *ngFor="let item of dataReport.reportall.items">
-    <div class="row">
-      <div class="col-6 border-right text-center">
-        <p class="mt-2 mb-2 mg-o ">{{item.name}}</p>
+  <div name="divForReportAll" class="col-12" *ngFor="let item of dataReport.reportall.items">
+    <div name="divRowReportAll" class="row">
+      <div name="divReportName" class="col-6 border-right text-center">
+        <p name="reprotName" class="mt-2 mb-2 mg-o ">{{item.name}}</p>
       </div>
-      <div class="col-3 border-right text-center">
-        <p class="mt-2 mb-2 mg-o ">{{item.qty}} </p>
+      <div name="divReportQty" class="col-3 border-right text-center">
+        <p name="reportQty" class="mt-2 mb-2 mg-o ">{{item.qty}} </p>
       </div>
-      <div class="col-3 border-right text-center">
-        <p class="mt-2 mb-2 mg-o ">{{item.price }} </p>
+      <div name="divReporthPrice" class="col-3 border-right text-center">
+        <p name="reportPrice" class="mt-2 mb-2 mg-o ">{{item.price }} </p>
       </div>
     </div>
-
   </div>
-
-  <div class="col-6 border-right border-top text-center">
-    <p style="font-weight: bold;" class="mt-2 mb-2">รวม</p>
+  <div name="divtextSum" class="col-6 border-right border-top text-center">
+    <p name="textSum" style="font-weight: bold;" class="mt-2 mb-2">รวม</p>
   </div>
-  <div class="col-3 border-right border-top text-center">
-    <p style="font-weight: bold;" class="mt-2 mb-2">{{dataReport.reportall.totalqty | number}}</p>
+  <div name="divTextQty" class="col-3 border-right border-top text-center">
+    <p name="textQty" style="font-weight: bold;" class="mt-2 mb-2">{{dataReport.reportall.totalqty | number}}</p>
   </div>
-  <div class="col-3  border-top border-right text-center">
-    <p style="font-weight: bold;" class="mt-2 mb-2">{{dataReport.reportall.totalprice | number}}</p>
+  <div name="divTextTotalPrice" class="col-3  border-top border-right text-center">
+    <p name="totoPrice" style="font-weight: bold;" class="mt-2 mb-2">{{dataReport.reportall.totalprice | number}}</p>
   </div>
 </div>
-
-<div class="row mt-3 border-all border-right mb-3" *ngIf="dataReport && dataReport.reportDetail">
-  <div class="col-4 ">
-    <p class="mt-2 mb-2">ผู้รับ</p>
+<div name="divForTextReportDetail" class="row mt-3 border-all border-right mb-3"
+  *ngIf="dataReport && dataReport.reportDetail">
+  <div name="divTextCustomer" class="col-4 ">
+    <p name="textCustomer" class="mt-2 mb-2">ผู้รับ</p>
   </div>
-  <div class="col-4 ">
-    <p class="mt-2 mb-2">รายละเอียด</p>
+  <div name="divTextDetailCustomer" class="col-4 ">
+    <p name="textDetailCustomer" class="mt-2 mb-2">รายละเอียด</p>
   </div>
-  <div class="col-4 ">
-    <p class="mt-2 mb-2">จำนวน</p>
+  <div name="divTextQtyCustomer" class="col-4 ">
+    <p name="textQtyCustomer" class="mt-2 mb-2">จำนวน</p>
   </div>
-  <div class="col-12 border-top" *ngFor="let item of dataReport.reportDetail">
-    <div class="row">
-      <div class="col-4">
-        <p class="mt-2 mb-2 mg-o ">{{item.customer.firstname}} {{item.customer.lastname}}</p>
+  <div name="divForReportDetail" class="col-12 border-top" *ngFor="let item of dataReport.reportDetail">
+    <div name="divRowReportDetail" class="row">
+      <div name="divNameCustomer" class="col-4">
+        <p name="nameCustomer" class="mt-2 mb-2 mg-o ">{{item.customer.firstname}} {{item.customer.lastname}}</p>
       </div>
-      <div class="col-8">
-        <div class="row" *ngFor="let itm of item.items">
-          <div class="col-12">
-            <p class="mt-2 mb-2 mg-o ">-{{itm.name}}</p>
+      <div name="divNameProductOption" class="col-8">
+        <div name="divForProductOption" class="row" *ngFor="let itm of item.items">
+          <div name="divNameItm" class="col-12">
+            <p name="nameItm" class="mt-2 mb-2 mg-o ">-{{itm.name}}</p>
           </div>
-          <div class="col-12" *ngFor="let it of itm.value">
-            <div class="row">
-              <div class="col-6">
-                <p class="mt-2 mb-2 mg-o mg-Left">{{it.name}}</p>
+          <div name="divForValue" class="col-12" *ngFor="let it of itm.value">
+            <div name="divRowValue" class="row">
+              <div name="divNameValue" class="col-6">
+                <p name="nameValue" class="mt-2 mb-2 mg-o mg-Left">{{it.name}}</p>
               </div>
-              <div class="col-6">
-                <p class="mt-2 mb-2 mg-o mg-Left"> <span>{{it.qty}}</span> </p>
+              <div name="divQtyValue" class="col-6">
+                <p name="qtyValue" class="mt-2 mb-2 mg-o mg-Left"> <span>{{it.qty}}</span> </p>
               </div>
             </div>
           </div>
@@ -74,9 +70,9 @@
 
   </div>
 </div>
-<div class="row mb-3">
-  <div class="col-12 text-right">
-    <button mat-stroked-button color="accent" (click)="goBack()">ย้อนกลับ</button>
-    <button mat-stroked-button color="accent" class="ml-2">พิมพ์ใบเบิกสินค้า</button>
+<div class="row mb-3" name="divRowBtn">
+  <div name="divColBtn" class="col-12 text-right">
+    <button name="btnBack" mat-stroked-button color="accent" (click)="goBack()">ย้อนกลับ</button>
+    <button name="btnPrint" mat-stroked-button color="accent" class="ml-2">พิมพ์ใบเบิกสินค้า</button>
   </div>
 </div>
