--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -14,7 +14,8 @@
                 name="colBtnWaitWithdrawal">
                 <button mat-stroked-button color="accent" (click)="gotoOrderReport(item)" class="style-btn mr-2"
                   name="btnWithdrawalList">รายการเบิก</button>
-                <button mat-stroked-button color="accent" class="style-btn" name="btnWithdrawal">ทำการเบิกเเล้ว</button>
+                <button mat-stroked-button color="accent" class="style-btn" name="btnWithdrawal"
+                  (click)="toWaitPack(item)">ทำการเบิกเเล้ว</button>
               </div>
               <div class="col-12 col-xs-12 col-sm-12 col-md-3 d-block d-xs-block d-sm-none d-md-none"
                 name="colBtnWaitWithdrawal2">
@@ -48,7 +49,7 @@
   </mat-tab>
 
   <mat-tab label="รอการเเพ็ค" name="tabWaitPack">
-    <div class="row" name="rowWaitPack"> 
+    <div class="row" name="rowWaitPack">
       <div class="col-12" *ngIf="waitpack && waitpack.length > 0" name="colWaitPack">
         <div class="border-bt" *ngFor="let item2 of waitpack" name="divForWaitPack">
           <div name="divWaitPack">
@@ -60,7 +61,8 @@
               </div>
               <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
                 name="colBtnWaitPack">
-                <button mat-stroked-button color="accent" class="style-btn" name="btnPack">เเพ็คสินค้าเเล้ว</button>
+                <button mat-stroked-button color="accent" class="style-btn" name="btnPack"
+                  (click)="toWaitShipping(item2)">เเพ็คสินค้าเเล้ว</button>
               </div>
             </div>
             <div class="row mt-2 mb-3 scroll-x" name="rowOrderStaff2">
@@ -122,7 +124,8 @@
               </div>
               <div class="col-12 col-xs-12 col-sm-6 col-md-6 text-right d-none d-xs-none d-sm-block d-md-block"
                 name="colBtnWaitShipping">
-                <button mat-stroked-button color="accent" class="style-btn" name="btnShipping">จัดส่งเเล้ว</button>
+                <button mat-stroked-button color="accent" class="style-btn" name="btnShipping"
+                  (click)="toComplete(item3)">จัดส่งเเล้ว</button>
               </div>
             </div>
             <div class="row mt-2 mb-3 scroll-x" name="rowOrderStaff3">
