--- a/src/app/pages/monitor/monitor.component.html
+++ b/src/app/pages/monitor/monitor.component.html
@@ -94,7 +94,7 @@
                       name="btnPrint">พิมพ์</button>
                   </div>
                   <div class="col-6 pl-0 pr-0" name="colBtnLabel2">
-                    <button mat-stroked-button color="accent" class="full-width btn-list-style" (click)="addBox()"
+                    <button mat-stroked-button color="accent" class="full-width btn-list-style" (click)="addBox(itm2,item2)"
                       name="btnAddBox">เพิ่มกล่อง</button>
                   </div>
                 </div>
